<resources>
    <string name="app_name">ILoveZappos</string>
    <string name="edit_message">Type any thing you want</string>
    <string name="button_send">Search</string>
    <string name="picture">Main Picture</string>
    <string name="item_name">Name</string>
    <string name="item_brand">Brand</string>
    <string name="item_origin_price">Origin Price: </string>
    <string name="item_price">Price: </string>
    <string name="item_discount">Discount: </string>
    <string name="item_url">More detail? Click Me</string>
    <string name="item_share">Share this item</string>
    <string name="key_sentence">http://huafeng.me/app/ilovezappos/share/</string>
    <string name="app_label">Zappos</string>
    <string name="search_hint">Search…</string>
</resources>