<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable name="item" type="me.huafeng.ilovezappos.Result"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/big_view"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                >



                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="6dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            >
                            <android.support.v7.widget.CardView
                                android:id="@+id/card_view2"
                                android:layout_gravity="center"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                card_view:cardCornerRadius="4dp"
                                card_view:cardElevation="4dp"
                                android:layout_weight="0.85"
                                >
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="120dp"
                                    android:id="@+id/img_item"
                                    android:scaleType="fitCenter"
                                    android:contentDescription="@string/picture"
                                    android:layout_marginTop="10dp"
                                    app:thumbnailImageUrl="@{item.thumbnailImageUrl}"
                                    />
                            </android.support.v7.widget.CardView>
                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                >
                                <TextView
                                    android:id="@+id/text_item_brand"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/item_brand"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="18sp"
                                    android:layout_margin="5dp"
                                    />
                                <TextView
                                    android:id="@+id/text_item_brand_detail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@{item.brandName}"
                                    android:textColor="@color/cardview_dark_background"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginBottom="5dp"
                                    />
                                <TextView
                                    android:id="@+id/text_item_name"
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/item_name"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="18sp"
                                    android:layout_marginStart="5dp"
                                    />
                                <TextView
                                    android:id="@+id/text_item_name_detail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@{item.productName}"
                                    android:textColor="@color/cardview_dark_background"
                                    android:layout_margin="5dp"
                                    android:lines="3"
                                    />


                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="8dp"
                            >
                            <TextView
                                android:id="@+id/text_item_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_price"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="18sp"
                                android:layout_marginEnd="10dp"
                                />

                            <TextView
                                android:id="@+id/text_item_price_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{item.price}"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="18sp"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="8dp"
                            >
                            <TextView
                                android:id="@+id/text_item_origin_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_origin_price"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_marginEnd="10dp"
                                />
                            <TextView
                                android:id="@+id/text_item_origin_price_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{item.originalPrice}"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_marginEnd="20dp"
                                />

                            <TextView
                                android:id="@+id/text_item_discount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_discount"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/colorPrimaryDark"
                                />
                            <TextView
                                android:id="@+id/text_item_discount_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{item.percentOff}"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/colorAccent"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="8dp"
                            >
                            <TextView
                                android:id="@+id/text_item_url"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_url"
                                android:textStyle="bold"
                                android:textSize="13sp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/colorAccent"
                                android:autoLink="web"
                                android:clickable="true"
                                android:linksClickable="true"
                                />
                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeightSmall"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edit_message"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/edit_message"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_send"
                        android:onClick="startSearch"
                        android:shadowDx="100"
                        android:shadowRadius="20"
                        android:id="@+id/button" />

                </LinearLayout>

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="240dp"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/zappos"
                    android:id="@+id/imageView"
                    android:layout_marginTop="10dp"
                    />



            </LinearLayout>
        </ScrollView>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:layout_marginBottom="25dp"
            android:id="@+id/floatingActionButton"
            android:layout_marginEnd="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="addToCart"
            app:elevation="10dp"
            app:borderWidth="0dp"
            />
    </RelativeLayout>

</layout>
